# flipper-aichat

./: .gitignore  LICENSE  README.md  gitignore
.github/: ci.yml
.github/workflows/: ci(1).yml  ci(2).yml  ci(3).yml  ci(4).yml  ci.yml
Linux-tui/tests/: test_protocol.py
Linux_tui/tests/: test_long_range_connection.py
docs/: PHONE_RELAY.md  PROTOCOL.md  SETUP.md
esp32-bridge/: platformio.ini
esp32-bridge/src/: config.h  main.cpp
flipper-app/: ai_chat.c  ai_chat_chat_view.c  ai_chat_chat_view.h  ai_chat_protocol.c  ai_chat_protocol.h  ai_chat_uart.c  ai_chat_uart.h  application.fam  test_tailscale_connectivity.py
linux-tui/: pyproject.toml
linux-tui/ai_chat_tui/: app.py  config.py  lmstudio client.py  lmstudio_client.py  protocol.py  serial_link.py
linux-tui/tests/: test app bindings.py  test lmstudio client timeout.py  test_protocol.py
web-installer/: index.html  manifest.example.json
webinstaller/: index 4.html  index(5).html  index.html  manifest.json
