[project]
name = "ai-chat-tui"
version = "1.0.0"
description = "Linux TUI companion for the Flipper Zero AI Chat app - direct LM Studio testing and ESP32 devboard provisioning"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.58.0",
    "pyserial>=3.5",
    "httpx>=0.27.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
ai-chat-tui = "ai_chat_tui.app:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_chat_tui*"]
